# tracking-markers

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/release-notes/: v0.10.0.md  v0.11.0.md  v0.12.0.md
.github/workflows/: github-repo-stats.yml  publish.yml
bertoldi-collab/tracking-markers/: README.md
bertoldi-collab/tracking-markers/ghrs-data/: forks.csv  stargazers.csv  views_clones_aggregate.csv
bertoldi-collab/tracking-markers/ghrs-data/snapshots/: 2026-04-09_045852_top_paths_snapshot.csv
bertoldi-collab/tracking-markers/latest-report/: report.html  report.md  report_for_pdf.html
docs/superpowers/plans/: 2026-05-27-migrate-poetry-to-uv.md
docs/superpowers/specs/: 2026-05-27-migrate-poetry-to-uv-design.md
tests/: test_tracking_markers.py
tracking_markers/: __init__.py  tracking_points.py  utils.py
