[project]
name = "tracking-markers"
version = "0.10.0"
description = "A humble image tracking code"
authors = [{ name = "Giovanni Bordiga", email = "gbordiga@seas.harvard.edu" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["image-tracking", "opencv"]
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.26.1,<2",
    "opencv-python>=4.8.1.78,<5",
    "tqdm>=4.67.1,<5",
]

[project.urls]
Homepage = "https://github.com/bertoldi-collab/tracking-markers"
Repository = "https://github.com/bertoldi-collab/tracking-markers"

[project.scripts]
tracking-markers = "tracking_markers.tracking_points:main"

[dependency-groups]
dev = ["pytest>=7.4.3,<8"]

[tool.uv]
keyring-provider = "subprocess"
publish-url = "https://upload.pypi.org/legacy/"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
